[gd_scene load_steps=2 format=3 uid="uid://dgyrykdphmrjr"]

[ext_resource type="Script" uid="uid://b0grnns2ch2rx" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.5
offset_top = -224.0
offset_right = 370.5
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Szia! Köszöntelek a játékomhoz!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 46.0
offset_right = 200.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 50
text = "Pörgetés"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -4096
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1578.5
offset_top = -601.5
offset_right = 1578.5
offset_bottom = 601.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
